--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=7,8,9">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://biblioteca.sistedes.es/wp-content/themes/sistedes/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <title></title>
     {% load static %}
     {% block head %}
@@ -31,7 +32,7 @@
 <header id="cabecera">
     <div class="wrapper">
         <div id="logo" class="c c-1-2 c-first">
-            <p><a href="http://www.sistedes.es"
+            <p style="margin-left: 90px;"><a href="http://www.sistedes.es"
                   title="Volver al sitio principal de SISTEDES (este enlace se abrirá en una ventana emergente)"
                   target="_blank"><img src="{% static 'biblioteca_sistedes/img/logo_1.png' %}"
                                        alt="Sistedes"></a><img
@@ -48,8 +49,11 @@
                 <li id="menu-item-385" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-385"><a
                         href="https://biblioteca.sistedes.es/biblioteca/">Acerca de la Biblioteca</a></li>
                 <li id="menu-item-388"
-                    class="last-item menu-item menu-item-type-post_type menu-item-object-page menu-item-388"><a
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388"><a
                         href="https://biblioteca.sistedes.es/contacto/">Contacto</a></li>
+                <li id="menu-item-389"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388"><a
+                        href="https://biblioteca.sistedes.es/contacto/">Iniciar sesión</a></li>
             </ul>
         </nav>
     </div>
