New engine search

--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -43,7 +43,7 @@
             <ul id="menu-principal-ul" class="menu">
                 <li id="menu-item-379"
                     class="first-item menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-379">
-                    <a href="https://biblioteca.sistedes.es/">Inicio</a></li>
+                    <a href="/biblioteca/">Inicio</a></li>
                 <li id="menu-item-382" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-382"><a
                         href="https://biblioteca.sistedes.es/noticias/">Noticias</a></li>
                 <li id="menu-item-385" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-385"><a
@@ -53,7 +53,7 @@
                         href="https://biblioteca.sistedes.es/contacto/">Contacto</a></li>
                 <li id="menu-item-389"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388"><a
-                        href="https://biblioteca.sistedes.es/contacto/">Iniciar sesión</a></li>
+                        href="/biblioteca/login">Iniciar sesión</a></li>
             </ul>
         </nav>
     </div>
