--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base_form.html
@@ -1,4 +1,6 @@
 {% extends 'biblioteca_sistedes/base.html' %}
+{% block sidebar %}
+{% endblock %}
 {% block content %}
         <form method="post" enctype="multipart/form-data">{% csrf_token %}
                 {% block form %}
