--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -7,7 +7,7 @@
     <title></title>
     {% load static %}
     {% block head %}
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" type="text/css" href="{% static 'biblioteca_sistedes/css/grid.min.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'biblioteca_sistedes/css/button_style.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'biblioteca_sistedes/css/form_style.css' %}"/>
@@ -39,7 +39,7 @@
                     src="{% static 'biblioteca_sistedes/img/logo_2.png' %}" alt="Biblioteca Digital">
             </p>
         </div>
-        <nav id="menu-principal" class="c c-1-2 c-last c-right">
+        <nav id="menu-principal" class="c c-1-2-e c-last c-right" style="margin-left: -50px; display: inline;">
             <ul id="menu-principal-ul" class="menu">
                 <li id="menu-item-379"
                     class="first-item menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-379">
@@ -51,9 +51,18 @@
                 <li id="menu-item-388"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388"><a
                         href="https://biblioteca.sistedes.es/contacto/">Contacto</a></li>
+                {% if request.session.username %}
+                <li id="menu-item-393"
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388">
+                    <a href="/biblioteca/logout/">Cerrar sesión</a>
+                </li>
+
+                {% else %}
                 <li id="menu-item-389"
-                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388"><a
-                        href="/biblioteca/login">Iniciar sesión</a></li>
+                    class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388">
+                    <a href="/biblioteca/getlogin/">Iniciar sesión</a>
+                </li>
+                {% endif %}
             </ul>
         </nav>
     </div>
@@ -61,6 +70,8 @@
 </header>
 <main id="contenido">
     <div class="contenedor1">
+        Hola s{{ request.session.username }}
+        {% block sidebar %}
         <div class="divSidebar">
             <h2>Navegación</h2>
             <div class="arbolNavegacion">
@@ -155,11 +166,11 @@
                 <p style="margin-top: -15px;"><a href="/biblioteca/busqueda/">Búsqueda avanzada</a></p>
             </div>
         </div>
-        <div class="divContenido">
-            <div id="navegacionTop">
-            </div>
+        {% endblock %}
 
+        <div class="divContenido">
             {% block content %}
+            <div id="navegacionTop"></div>
             <article class="page page_378">
                 <header class="wrapper">
                     <h1>Inicio</h1>
@@ -180,9 +191,8 @@
                     </div>
                 </section>
             </article>
-            {% endblock %}
         </div>
-    </div>
+        {% endblock %}
     </div>
 
 
