--- a/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
@@ -1,7 +1,7 @@
 <html lang="en-us">
 <head>
     {% load static %}
-    <title>Log in | Django site admin</title>
+    <title>Log in | Biblioteca sistedes</title>
     <link rel="stylesheet" type="text/css" href="/static/admin/css/login.css">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
@@ -77,7 +77,7 @@
     <!-- Content -->
     <div id="content" class="colM">
         <div id="content-main">
-            <form action="/admin/login/?next=/admin/" method="post" id="login-form">
+            <form action="/biblioteca/login/" method="post" id="login-form">{% csrf_token %}
                 <input type="hidden">
                 <div class="form-row">
                     <label class="required" for="id_username">Username:</label> <input type="text" name="username"
@@ -90,7 +90,7 @@
                                                                                        id="id_password" required="">
                     <input type="hidden" name="next" value="/admin/">
                 </div>
-
+                <!--{{ form_login.as_p }}-->
 
                 <div class="submit-row">
                     <label>&nbsp;</label><input type="submit" value="Log in">
