--- a/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/login.html
@@ -46,12 +46,12 @@
                     class="first-item menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-379">
                     <a href="/biblioteca/">Inicio</a></li>
                 <li id="menu-item-382" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-382"><a
-                        href="https://biblioteca.sistedes.es/noticias/">Noticias</a></li>
+                        href="">Noticias</a></li>
                 <li id="menu-item-385" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-385"><a
-                        href="https://biblioteca.sistedes.es/biblioteca/">Acerca de la Biblioteca</a></li>
+                        href="">Acerca de la Biblioteca</a></li>
                 <li id="menu-item-388"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388"><a
-                        href="https://biblioteca.sistedes.es/contacto/">Contacto</a></li>
+                        href="">Contacto</a></li>
                 <li id="menu-item-389"
                     class="menu-item menu-item-type-post_type menu-item-object-page menu-item-388"><a
                         href="/biblioteca/login">Iniciar sesión</a></li>
