--- a/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
+++ b/biblioteca_sistedes/templates/biblioteca_sistedes/base.html
@@ -59,7 +59,7 @@
                 {% if request.session.username %}
 
                 <li class="dropdown-submenu" >
-                    <a class="test"  tabindex="-1" href="#" onclick="dropdown()"> <i class="fa fa-caret-down" style="font-size:24px"></i><span
+                    <a class="test"  tabindex="-1" href="#" onclick="dropdown()"> <i class="fa fa-user"></i> <i class="fa fa-caret-down" style="font-size:24px"></i><span
                             class="caret"></span></a>
                     <ul class="dropdown-menu" id="arrow-menu" >
                         <br/>
